# TwentyFortyEight

./: Application.h  CMakeLists.txt  CMakePresets.json  DisplayManager.cpp  DisplayManager.h  InputManager.h  README.md  Renderer.h  TwentyFortyEight.h  main.cpp  vcpkg.json
.github/workflows/: build.yml
src/: Application.cpp  Application.h  Config.h  DisplayManager.cpp  DisplayManager.h  Renderer.cpp  Renderer.h  TileRenderer.cpp  TileRenderer.h  TwentyFortyEightEngine.cpp  TwentyFortyEightEngine.h  main.cpp
